# madevent7

./: .clang-format  .clang-format-ignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  generate_headers.py  generate_pyi.sh  instruction_set.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml  rocm.repo
docs/: Doxyfile  requirements.txt
docs/source/: conf.py  cpp-api.rst  index.rst  installation.rst  python-api.rst
include/madevent/: constants.h  driver.h  madcode.h  phasespace.h  runtime.h  util.h
include/madevent/backend/: context.h  tensor.h
include/madevent/backend/cpu/: runtime.h  tensor.h  thread_pool.h
include/madevent/backend/cuda/: device.h  runtime.h  tensor.h
include/madevent/cpu/: runtime.h
include/madevent/driver/: combine.h  generate.h  io.h  vegas.h
include/madevent/madcode/: function.h  function_builder_mixin.h  instruction.h  instruction_set.h  opcode_mixin.h  optimizer.h  type.h
include/madevent/phasespace/: base.h  channel_weight_network.h  channel_weights.h  chili.h  color_ordered_mapping.h  cross_section.h  cuts.h  diagram.h  discrete_flow.h  discrete_sampler.h  flow.h  histograms.h  integrand.h  invariants.h  luminosity.h  mapping.h  matrix_element.h  mlp.h  multichannel.h  observable.h  pdf.h  phasespace.h  rambo.h  scale.h  t_propagator_mapping.h  three_particle.h  topology.h  two_particle.h  vegas.h
include/madevent/runtime/: context.h  discrete_optimizer.h  event_generator.h  format.h  generate.h  io.h  lhe_output.h  pdf_wrapper.h  runtime_base.h  tensor.h  thread_pool.h  vegas_optimizer.h
madevent7/: __init__.py  _madevent_py.pyi  _madevent_py_loader.py  function_module.py  madnis.py  torch.py
src/: util.cpp
src/backend/: context.cpp  tensor.cpp
src/backend/common/: autograd.h  cuts.h  discrete.h  invariants.h  kernels.h  kinematics.h  math.h  nn.h  rambo.h  two_particle.h  vegas.h
src/backend/cpu/: accessor.h  kernels.h  runtime.cpp  runtime.h  runtime_backward_mixin.h  runtime_mixin.h  simd.h  simd_arm.h  simd_x86_256.h  tensor.cpp  tensor.h  thread_pool.cpp
src/backend/cuda/: device.cu  kernels.h  runtime.cu  runtime_mixin.h  tensor.cu
src/cpu/: accessor.h  device.cpp  device.h  kernel_definitions.h  kernels.h  kinematics.h  math.h  runtime.cpp  runtime.h  runtime_backward_mixin.h  runtime_mixin.h  simd.h  simd_arm.h  simd_x86_256.h  simd_x86_512.h  tensor.h  two_particle.h
src/cuda/: device.cu  device.h  kernel_definitions.h  kernels.h  runtime.cu  runtime.h  runtime_backward_mixin.h  runtime_mixin.h  tensor.h
src/driver/: combine.cpp  generate.cpp  io.cpp  vegas.cpp
src/gpu/: device.cu  device.h  device.hip  gpu_abstraction.h  kernel_definitions.h  runtime.cu  runtime.h  runtime.hip  runtime_backward_mixin.h  runtime_mixin.h  tensor.h
src/kernels/: autograd.h  chili.h  cuts.h  definitions.h  discrete.h  invariants.h  kernels.h  kinematics.h  math.h  multichannel.h  nn.h  observables.h  operations.h  pdf.h  rambo.h  scale.h  threeparticle.h  twoparticle.h  util.h  vegas.h
src/madcode/: function.cpp  instruction.cpp  instruction_set.cpp  instruction_set.yaml  instruction_set_mixin.h  optimizer.cpp  type.cpp
src/phasespace/: base.cpp  channel_weight_network.cpp  channel_weights.cpp  chili.cpp  cross_section.cpp  cuts.cpp  diagram.cpp  discrete_flow.cpp  discrete_sampler.cpp  flow.cpp  histograms.cpp  integrand.cpp  invariants.cpp  luminosity.cpp  mapping.cpp  matrix_element.cpp  mlp.cpp  multichannel.cpp  observable.cpp  pdf.cpp  phasespace.cpp  phasespace_new.cpp  rambo.cpp  rambo.h  scale.cpp  t_propagator_mapping.cpp  three_particle.cpp  topology.cpp  two_particle.cpp  vegas.cpp
src/python/: dlpack.h  function.cpp  function.h  function_runtime.cpp  function_runtime.h  instruction_set.h  madevent.cpp  tensor.h  torch.cpp  torch.h
src/runtime/: context.cpp  discrete_optimizer.cpp  event_generator.cpp  format.cpp  generate.cpp  io.cpp  lhe_output.cpp  pdf_wrapper.cpp  runtime_base.cpp  tensor.cpp  thread_pool.cpp  vegas.cpp  vegas_optimizer.cpp
src/test/: main.cpp
tests/: test_2to3_scattering.py  test_flow.py  test_invariants.py  test_mlp.py  test_pdf.py  test_phasespace_mapping.py  test_processes.py  test_t_channel.py  test_three_body_decay.py  test_three_particle.py  test_two_particle.py
tests/processes/: ttgg.json  ttggg.json
