[build-system]
requires = ["scikit-build-core>=0.10", "torch"]
build-backend = "scikit_build_core.build"

[project]
name = "madevent7"
version = "0.1.0"
description="Fast and flexible phase space mappings"
readme = "README.md"
authors = [
  { name = "Theo Heimel", email = "theo.heimel@uclouvain.be" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "torch",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"
